# interpreter-in-C

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  main.c
apps/: CMakeLists.txt  repl.c
include/: lexer.h  tokens.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  lexer.c  main.c  tokens.c
tests/: CMakeLists.txt  test_lexer.c
